--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -18,6 +18,19 @@ services:
     restart: unless-stopped
 
   # ============================================================================
+  # Pub/Sub Emulator (for local development)
+  # ============================================================================
+  pubsub-emulator:
+    image: gcr.io/google.com/cloudsdktool/cloud-sdk:latest
+    container_name: pubsub-emulator
+    command: gcloud beta emulators pubsub start --host-port=0.0.0.0:8085
+    ports:
+      - "8085:8085"
+    networks:
+      - smart-stay-network
+    restart: unless-stopped
+
+  # ============================================================================
   # Reservation Service
   # ============================================================================
   reservation-service:
@@ -27,8 +40,11 @@ services:
     container_name: reservation-service
     environment:
       PORT: 50052
+      PUBSUB_EMULATOR_HOST: pubsub-emulator:8085
     ports:
       - "50052:50052"
+    depends_on:
+      - pubsub-emulator
     networks:
       - smart-stay-network
     restart: unless-stopped
@@ -43,8 +59,11 @@ services:
     container_name: key-service
     environment:
       PORT: 50053
+      PUBSUB_EMULATOR_HOST: pubsub-emulator:8085
     ports:
       - "50053:50053"
+    depends_on:
+      - pubsub-emulator
     networks:
       - smart-stay-network
     restart: unless-stopped
@@ -60,11 +79,13 @@ services:
     environment:
       PORT: 8080
       AUTH_SVC_ADDR: auth-service:50051
+      RESERVATION_SVC_ADDR: reservation-service:50052
       KEY_SVC_ADDR: key-service:50053
     ports:
       - "8080:8080"
     depends_on:
       - auth-service
+      - reservation-service
       - key-service
     networks:
       - smart-stay-network
