--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,6 +2,32 @@ version: "3.8"
 
 services:
   # ============================================================================
+  # PostgreSQL Database
+  # ============================================================================
+  postgres:
+    image: postgres:16-alpine
+    container_name: postgres
+    environment:
+      # ⚠️ These environment variables MUST be set via .env file or environment
+      # For local development, copy .env.example to .env and set values
+      POSTGRES_USER: ${POSTGRES_USER}
+      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
+      POSTGRES_DB: ${POSTGRES_DB}
+    ports:
+      - "5432:5432"
+    volumes:
+      - postgres_data:/var/lib/postgresql/data
+      - ./internal/database/migrations:/docker-entrypoint-initdb.d
+    networks:
+      - smart-stay-network
+    restart: unless-stopped
+    healthcheck:
+      test: ["CMD-SHELL", "pg_isready -U ${POSTGRES_USER:-postgres}"]
+      interval: 10s
+      timeout: 5s
+      retries: 5
+
+  # ============================================================================
   # Auth Service
   # ============================================================================
   auth-service:
@@ -11,7 +37,12 @@ services:
     container_name: auth-service
     environment:
       PORT: 50051
-      JWT_SECRET: ${JWT_SECRET:-smart-stay-platform-secret-key-change-in-production}
+      # ⚠️ JWT_SECRET MUST be set via .env file or environment
+      # For local development, copy .env.example to .env and set values
+      JWT_SECRET: ${JWT_SECRET}
+      # DATABASE_URL MUST be set via .env file or environment
+      # Format: postgres://USER:PASSWORD@postgres:5432/DBNAME?sslmode=disable
+      DATABASE_URL: ${DATABASE_URL}
     ports:
       - "50051:50051"
     networks:
@@ -82,12 +113,14 @@ services:
       AUTH_SVC_ADDR: auth-service:50051
       RESERVATION_SVC_ADDR: reservation-service:50052
       KEY_SVC_ADDR: key-service:50053
+      CORS_ALLOWED_ORIGIN: ${CORS_ALLOWED_ORIGIN:-http://localhost:3000}
     ports:
       - "8080:8080"
     depends_on:
       - auth-service
       - reservation-service
       - key-service
+      - postgres
     networks:
       - smart-stay-network
     restart: unless-stopped
@@ -95,3 +128,6 @@ services:
 networks:
   smart-stay-network:
     driver: bridge
+
+volumes:
+  postgres_data:
